Bug 100660 - Starting document from a template crashes LibreOffice
Summary: Starting document from a template crashes LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Akshay Deep
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-06-28 15:00 UTC by Cor Nouws
Modified: 2016-10-25 18:55 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (10.04 KB, text/plain)
2016-06-28 21:04 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2016-06-28 15:00:01 UTC
Open template manager (Ctrl+Shft+N)
Choose template, Enter or ddouble click
 > Crash

both with clean and older user profile

Version: 5.3.0.0.alpha0+
Build ID: e74382fd6385138b164df5e4f93a0e7df2857f2c
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2016-06-28_00:20:24
Locale: nl-NL (nl_NL.UTF-8)
Comment 1 Cor Nouws 2016-06-28 15:02:49 UTC
does not crash in 5.1.4.2 - quite obvious a regression ;)
Comment 2 Julien Nabet 2016-06-28 21:04:47 UTC
Created attachment 125971 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
(612ebb9b972fde18b1492b601116a8c03adb2912)
Comment 3 Julien Nabet 2016-06-28 21:15:22 UTC
Akshay: perhaps it's a regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=77725bf4df6e9cf63469c1d7f8888ea339575b5e ?
indeed nothing replaced this:
mxDesktop( Desktop::create(comphelper::getProcessComponentContext()) ),
so mxDesktop must be empty ref.
Any thoughts?
Comment 4 Akshay Deep 2016-06-29 02:41:49 UTC
@Julien, cor: Looks like I accidentally removed a line of code
Comment 5 Commit Notification 2016-06-29 02:47:44 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58f578263022e9fda5c235f09f88ec02e15965a9

tdf#100660 - Starting document from a template crashes LibreOffice

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Cor Nouws 2016-06-29 08:33:30 UTC
(In reply to Akshay Deep from comment #4)
> @Julien, cor: Looks like I accidentally removed a line of code

Heh ;) Thanks for fixing so fast!