tdf#100660 - Starting document from a template crashes LibreOffice

Change-Id: Ida89fa8d35d1e22c706bc3703d2397b572bc01b5